--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@
   href: "/research/"
 
 - title: "Projects"
-  href: "/Statistics-Bentley/"
+  href: "/projects/"
 
 - title: "Blog"
   href: "/blog/"
